# config-updater

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yaml  entrypoint.sh
.github/workflows/: docker-publish.yml
hooks/: README.md  mihomo.sh
src/: main.rs
