[package]
name = "config-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = "z"     # 优化大小
lto = true          # 链接时优化
codegen-units = 1   # 减少并行编译以优化大小
strip = true        # 移除符号表
